# AgentSON

./: .gitignore  AGENTS.md  ANTIREZ-LINEAGE.md  CHANGELOG.md  LICENSE  MANIFEST.in  PAPER-OUTLINE.md  PERSONAS-AND-USER-STORIES.md  PLAN-chrome-devtools-mcp-integration.md  PR-chrome-devtools-mcp-draft.md  PRD.md  README.md  ROADMAP.md  STATUS.md  STRATEGY-WHITEPAPER.md  agentson_cli.py  check_opencode.py  check_status.ps1  index.html  install.ps1  pyproject.toml  wiki_cheatsheet.py
SOPs/: SOP-001-Reading-FreeStyle-Libre-2-Sensor.md  SOP-002-Converting-Libre-Data-to-AgentSON.md  SOP-003-Viewing-Glucose-Data-in-Browser.md  SOP-004-Exporting-AI-Sessions.md  SOP-006-Sharing-Data-with-Doctors.md  SOP-007-Setting-Up-Nightscout-Server.md  SOP-008-WhatsApp-Bot-Setup.md  SOP-009-TV-Dashboard-Setup.md  SOP-014-West-Africa-Voice-Alerts.md  SOP-015-AI-Agent-Repository-Operating-Procedure.md  SOP-016-Work-In-Progress-Governance.md
cli/: help_system.py  main.py  supabase_client.py
docs/: 404.html  PROJECT-BRIEF.md  design-system.md  index.html  normalization.md
examples/: agentson_discussion.agentson  all_sessions.agentson  antigravity_example.agentson  chatgpt_all_sessions.json  chatgpt_conversation.md  chatgpt_export.agentson  chatgpt_export.json  cursor-cline-aider-readers-session.AgentSON  devtools_download_this_video_in_the_scene.AgentSON  dogfood-session-2026-07-06.agentson  mcp_demo.agentson  minimax_example.AgentSON  opencode_example.AgentSON  opencode_ses_0cb41785bffe80KSKWQPPeMJV0.agentson  opencode_ses_0cba093c2ffeCsX4cK31TWSMpy.agentson  opencode_ses_0cba097cdffe7t1xq7yM5muPPy.agentson  opencode_ses_0cbc4f799ffeqlfIbIaAmJnUZM.agentson  (+91 more)
exporters/: __init__.py  (+3 more)
(+177 files in other folders)
