[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentsong"
version = "0.1.0"
description = "Agent + JSON — vendor-neutral session capture format for AI coding agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "andiekobbietks"}
]
keywords = ["ai", "agent", "json", "session", "finetuning", "opencode", "minimax"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pyrefly>=0.1",
]
chatgpt = []  # ChatGPT importer uses only stdlib

[project.urls]
Homepage = "https://github.com/andiekobbietks/AgentSON"
Repository = "https://github.com/andiekobbietks/AgentSON"
Issues = "https://github.com/andiekobbietks/AgentSON/issues"

[project.scripts]
agentsong = "cli.main:main"

[tool.setuptools.package-data]
"spec" = ["v1.json"]
"supabase" = ["schema.sql"]
"examples" = ["*.AgentSON"]
"pwa" = ["manifest.json", "sw.js", "*.html", "*.png", "*.ico"]

[tool.setuptools.packages.find]
include = ["readers*", "exporters*", "importers*", "cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
